--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <canvas id="canvas"></canvas>
 
             <audio></audio>
+            <div class="bg-white"></div>
+
             <div class="overlay"></div>
             <p class="audio-text" id="audio-text"> </p>
             <figure class="fig">
