background fade, cancel scroll

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="bg-white"></div>
 
             <div class="overlay"></div>
+            <div class="fade"></div>
             <p class="audio-text" id="audio-text"> </p>
             <figure class="fig">
                 <img src="man.png" />
