--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <section>
         <!-- <section class="flex"> -->
-        <div class="card">
+        <!-- <div class="card">
             <div class="card-desc">
                 <span class="number" id="number">19700</span>
                 <p class="description">Nifty made another all time high this week.</p>
             </div>
             <div id="highchart"></div>
-        </div>
+        </div> -->
         <div id="container">
             <canvas id="canvas"></canvas>
 
