--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 
 <body>
     <section>
-        <!-- <section class="flex"> -->
-        <!-- <div class="card">
+        <div class="card">
             <div class="card-desc">
                 <span class="number" id="number">19700</span>
                 <p class="description">Nifty made another all time high this week.</p>
             </div>
             <div id="highchart"></div>
-        </div> -->
+        </div>
+
+        <div class="card equity">
+            <div class="card-desc">
+                <span class="number" id="number">45.2 lacs</span>
+                <p class="description">Your equity portfolio did pretty well this week.</p>
+            </div>
+            <div id="bar-highchart"></div>
+        </div>
+
         <div id="container">
             <canvas id="canvas"></canvas>
 
@@ -45,6 +53,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
 
     <script src="script.js" type="module"></script>
+    <script src="highchart.js" type="module"> </script>
 </body>
 
 </html>
