--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
             </div>
             <div id="bar-highchart"></div>
         </div>
-
+        <div class="card yellow">
+            <div class="card-desc">
+                <span class="number" id="number">14 lacs</span>
+                <p class="description">Gold is not looking so good this week.</p>
+            </div>
+            <div id="highchart-low"></div>
+        </div>
+        <div class="card bar-new">
+            <div class="card-desc">
+                <span class="number" id="number">60.4 lacs</span>
+                <p class="description">Your debt portfolio is super solid.</p>
+            </div>
+            <div id="bars-highchart"></div>
+        </div>
         <div id="container">
             <canvas id="canvas"></canvas>
 
