animate charts on hit viewport

--- a/magazine.html
+++ b/magazine.html
@@ -143,7 +143,7 @@
                             <span class="number" id="number">19700</span>
                             <p class="description">Nifty made another all time high this week.</p>
                         </div>
-                        <div id="highchart"></div>
+                        <div id="highchart" class="highchart"></div>
                     </div>
                 </div>
 
@@ -152,21 +152,21 @@
                         <span class="number" id="number">45.2 lacs</span>
                         <p class="description">Your equity portfolio did pretty well this week.</p>
                     </div>
-                    <div id="bar-highchart"></div>
+                    <div id="bar-highchart" class="highchart"></div>
                 </div>
                 <div class="card yellow">
                     <div class="card-desc">
                         <span class="number" id="number">14 lacs</span>
                         <p class="description">Gold is not looking so good this week.</p>
                     </div>
-                    <div id="highchart-low"></div>
+                    <div id="highchart-low" class="highchart"></div>
                 </div>
                 <div class="card bar-new">
                     <div class="card-desc">
                         <span class="number" id="number">60.4 lacs</span>
                         <p class="description">Your debt portfolio is super solid.</p>
                     </div>
-                    <div id="bars-highchart"></div>
+                    <div id="bars-highchart" class="highchart"></div>
                 </div>
             </div>
         </section>
