scroll snap with scrollable sections

--- a/magazine.html
+++ b/magazine.html
@@ -14,8 +14,8 @@
         <img src="./assets/bell.svg" />
 
     </nav>
-    <div class="scroll-container">
-        <section class="section">
+    <div class="scroll-container" id="scroll-container">
+        <section class="section" id="first-section">
             <h5 class="small-heading">PILOT ISSUE</h5>
             <h2 class="heading">Overhead</h2>
             <figure class="cover-story" id="trigger" data-bottomsheet-id='bottomsheet-1'>
@@ -367,7 +367,7 @@
                 <img src="./assets/card.jpg" />
             </figure>
         </section>
-        <section class="section news">
+        <section class="section news" id="news">
             <h4 class="news-h4">NEWS</h4>
             <h2 class="news-h2">FROM THE</h2>
             <h4 class="news-h4">SOURCE</h4>
@@ -377,7 +377,7 @@
                 <audio></audio>
                 <div class="bg-white"></div>
 
-                <div class="overlay"></div>
+                <div class="overlay-bg"></div>
                 <div class="fade"></div>
                 <p class="audio-text" id="audio-text"> </p>
                 <figure class="fig">
@@ -396,7 +396,7 @@
                 </svg>
             </div>
         </section>
-        <section class="carousel-section">
+        <section class="carousel-section" id="scroll-section">
             <p class="zine">zine</p>
             <div class="carousel flex align-center">
                 <div class="padding ">
