scrollable section using js

--- a/magazine.html
+++ b/magazine.html
@@ -398,7 +398,7 @@
         </section>
         <section class="carousel-section" id="scroll-section">
             <p class="zine">zine</p>
-            <div class="carousel flex align-center">
+            <div class="carousel flex ">
                 <div class="padding ">
 
                     <div class="card">
@@ -432,6 +432,54 @@
                     <div id="bars-highchart" class="highchart"></div>
                 </div>
             </div>
+        </section>
+        <section class="scrollable-section" id="scrollable-section">
+            <h5 class="small-heading">PILOT ISSUE</h5>
+            <h2 class="heading">Overhead</h2>
+            <figure class="cover-story" id="trigger" data-bottomsheet-id='bottomsheet-1' class="bottomsheet">
+                <img src="./assets/Group 48.png" width="100%" />
+            </figure>
+            <div class="wealth-div">
+                <h5 class="small-heading text-left">WEALTH WATCH</h5>
+                <p class="wealth-watch-p">Your week in the markets.</p>
+                <ul class="stocks">
+                    <li class="stocks-li flex align-center justify-between">
+                        <span class="stocks-name">Nifty</span>
+                        <figure class="graph">
+                            <img src="./assets/nifty.png" />
+                        </figure>
+                        <span class="stock-number">3.15%</span>
+                    </li>
+                    <li class="stocks-li flex align-center justify-between">
+                        <span class="stocks-name">Equity</span>
+                        <figure class="graph">
+                            <img src="./assets/nifty.png" />
+                        </figure>
+                        <span class="stock-number">4.15%</span>
+                    </li>
+                    <li class="stocks-li flex align-center justify-between">
+                        <span class="stocks-name">Debt</span>
+                        <figure class="graph">
+                            <img src="./assets/debt.png" />
+                        </figure>
+                        <span class="stock-number red">3.15%</span>
+                    </li>
+                    <li class="stocks-li flex align-center justify-between">
+                        <span class="stocks-name">Gold</span>
+                        <figure class="graph">
+                            <img src="./assets/nifty.png" />
+                        </figure>
+                        <span class="stock-number">3.15%</span>
+                    </li>
+
+                </ul>
+                <h5 class="small-heading">PILOT ISSUE</h5>
+                <h2 class="heading">Overhead</h2>
+                <figure class="cover-story" id="trigger" data-bottomsheet-id='bottomsheet-1' class="bottomsheet">
+                    <img src="./assets/Group 48.png" width="100%" />
+                </figure>
+            </div>
+
         </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.2/lib/anime.min.js"></script>
