--- a/magazine.html
+++ b/magazine.html
@@ -378,8 +378,9 @@
                 <div class="bg-white"></div>
 
                 <div class="overlay-bg"></div>
-                <div class="fade"></div>
-                <p class="audio-text" id="audio-text"> </p>
+                <div class="audio-text" id="audio-text">
+                    <div class="fade"></div>
+                </div>
                 <figure class="fig">
                     <img src="man.png" />
                 </figure>
